<resources>
    <string name="app_name">DamTreb</string>
    <string name="text_main">Bienvenido a DamTreb</string>
    <string name="text_main_2">Selecciona una opción:</string>
    <string name="btn_billetes">Leer billetes</string>
    <string name="btn_agregar_ubicacion">Iniciar un recorrido</string>
    <string name="btn_ver">Seleccionar favorita para destino</string>
    <string name="btn_volver">Volver a menú</string>
    <string name="texto_location">Para el recorrido ingrese ubicación actual y destino</string>
    <string name="btn_ubicacion_actual">Ubicacion actual</string>
    <string name="btn_ubicacion_destino">Seleccionar ubicación destino</string>
    <string name="btn_agregar_fav">Agregar a favoritos</string>
    <string name="btn_distancia_location">Distancia hasta ubicación destino</string>
    <string name="btn_seleccionar_de_lista">Seleccionar ubicación</string>
    <string name="btn_eliminar_de_fila">Eliminar ubicación favorita</string>
    <string name="title_activity_maps">Map</string>
    <string name="texto_autocomplete">Ingresa el destino a buscar:</string>
</resources>
