<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LocationActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/etiquetas"
    android:text="@string/texto_location"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
<Button
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/btnMyLocation"
    android:text="@string/btn_ubicacion_actual"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn_ubicacion_destino"
            android:id="@+id/btnLocationDest"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
android:text="@string/btn_ver"
    android:id="@+id/btnVerFavoritas"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:id="@+id/btnAgregarFav"
        android:text="@string/btn_agregar_fav"
        android:visibility="gone"/>

</LinearLayout>