<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tituloMain"
        android:text="@string/app_name"
        android:textSize="@dimen/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textoMain"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textoMain"
        android:text="@string/text_main"
        android:textSize="@dimen/etiquetas"
        app:layout_constraintBottom_toBottomOf="@id/tituloMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textoMain2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:id="@+id/textoMain2"
        android:text="@string/text_main_2"
        android:textSize="@dimen/etiquetas"
        app:layout_constraintBottom_toBottomOf="@id/textoMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
app:layout_constraintTop_toTopOf="@id/btnLeerBilletes"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:id="@+id/btnLeerBilletes"
        android:text="@string/btn_billetes"
        app:layout_constraintBottom_toBottomOf="@id/textoMain2"
        app:layout_constraintEnd_toStartOf="@id/btnAgregarUbicacion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btnAgregarUbicacion"
    android:text="@string/btn_agregar_ubicacion"
    app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@id/btnLeerBilletes"
    app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>